src/objects/NDA_Disclosure_Request__c.object
<CustomObject>
    <description>Product NDA disclosure requests captured in this object</description>
    <fields>
        <fullName>Companion_MCR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MCR value Leave for Companion products</description>
        <label>Companion MCR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Companion_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Companion Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Companion_Prototype__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prototype value Leave for Companion Products</description>
        <label>Companion Prototype</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DPL_Status__c</fullName>
        <description>Category Lead approval status</description>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disclosure_Approval_Purpose__c</fullName>
        <label>Disclosure Approval Purpose</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NDAFileID__c</fullName>
        <description>NDAFileid for references to disclosures on NDA</description>
        <label>NDAFileID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDA__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to NDA For Product disclosures</description>
        <label>NDA</label>
        <referenceTo>NDA__c</referenceTo>
        <relationshipLabel>NDA Disclosure Requests</relationshipLabel>
        <relationshipName>NDA_Disclosure_Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Premium_MCR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MCR value Leave for Premium Products</description>
        <label>Premium MCR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Premium_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Product Category Premium</description>
        <label>Premium Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Premium_Prototype__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prototype value Leave for Premium</description>
        <label>Premium Prototype</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Software_MCR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MCR value Leave for Software</description>
        <label>Software MCR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Software_Prototype__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prototype value Leave for Software</description>
        <label>Software Prototype</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Software__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Software</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value_MCR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MCR value Leave for Value Products</description>
        <label>Value MCR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Value Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value_Prototype__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prototype value Leave for Value products</description>
        <label>Value Prototype</label>
        <type>Checkbox</type>
    </fields>
    <label>NDA Disclosure Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DPL_Status__c</columns>
        <columns>NDAFileID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Disclosure Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NDA Disclosure Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>